{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Camera",
            "id": "6ce0b579-0cd1-4a88-8d5d-af2357357117",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "de2bbc36-0469-477b-8251-b2b501c1067c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseWheel",
                    "type": "Value",
                    "id": "d540acb4-9e7c-4c7e-b053-cb0a64e45dbf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftMouseButton",
                    "type": "Button",
                    "id": "aeefc288-68e7-4f4b-a410-ec0104c9bb49",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "ef0d805d-56a9-415c-8d4c-2b2a8b7aa72a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "PassThrough",
                    "id": "18cb2ab5-8dfb-444b-9434-47ef885dbeba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f7ea09f8-19e1-4290-8c07-5be65bd6d27a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d70303ef-c0f0-46c7-860a-4525466b2dfb",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "282a5816-6296-4944-a10c-3095f2933b4f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9ff3906-d5a1-4e3f-8246-b3baca3d3f70",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e22df21a-edab-447c-ad65-ca803662483c",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Game",
            "id": "d7f7f409-f90a-46d9-b325-8e8b1569f1fc",
            "actions": [
                {
                    "name": "Esc",
                    "type": "Button",
                    "id": "cd1b3da5-88c4-4fe5-b016-ec92768dc182",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "112f8cd1-9221-434c-bc1e-9af3b7b3f56a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Esc",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}